# unnamed-rts

./: Cargo.toml  README.md  build.rs  run-client-server.ps1  run-client-server.sh  settings.cap
.cargo/: config.toml
.github/workflows/: general.yml
assets/: OrientationTest.glb  Tilemap.map  arrow.glb  mymap.map  toon.glb
benches/: intersection_bench.rs
src/: application.rs  assets.rs  common_systems.rs  components.rs  engine.rs  grid_graph.rs  input.rs  lib.rs  main.rs  map_chunk.rs  navigation.rs  resources.rs  server_systems.rs  states.rs  systems.rs  tilemap.rs
src/graphics/: camera.rs  common.rs  debug_lines_pass.rs  gltf.rs  grid_pass.rs  heightmap_pass.rs  lights.rs  mod.rs  model.rs  model_pass.rs  navmesh_pass.rs  renderer.rs  selection_pass.rs  simple_texture.rs  texture.rs  ui_context.rs  ui_pass.rs  vertex_buffers.rs
src/graphics/shaders/: debug_lines.frag.spv  debug_lines.spv  debug_lines.vert  debug_lines.vert.spv  flat_color.frag  flat_color.frag.spv  grid.frag  grid.frag.spv  grid.spv  grid.vert  grid.vert.spv  heightmap.spv  heightmap_pass.frag  heightmap_pass.frag.spv  heightmap_pass.vert  heightmap_pass.vert.spv  model.frag  model.frag.spv  model.spv  model.vert  model.vert.spv  model.wgsl  navmesh.frag  navmesh.frag.spv  test.frag.spv  ui.frag  ui.spv  ui.vert  ui.vert.spv
src/graphics/ui/: mod.rs  ui_context.rs  ui_pass.rs  ui_systems.rs
src/rendering/: camera.rs  common.rs  debug_lines_pass.rs  drawable_tilemap.rs  gltf.rs  heightmap_pass.rs  lights.rs  mesh_instance_buffer_cache.rs  mod.rs  model_pass.rs  texture.rs  tilemap_pass.rs  vertex_buffers.rs
src/rendering/pass/: debug_lines_pass.rs  grid_pass.rs  mod.rs  model_pass.rs  selection_pass.rs  tilemap_pass.rs  ui_pass.rs
src/rendering/pass/shaders/: grid.wgsl  ui.wgsl
src/rendering/shaders/: debug_lines.wgsl  grid.wgsl  heightmap.wgsl  model.wgsl  tilemap.wgsl  ui.wgsl
src/rendering/ui/: mod.rs  ui_pass.rs  ui_resources.rs  ui_systems.rs
src/shaders/: test.frag
src/ui/: mod.rs  ui_context.rs  ui_pass.rs  ui_resources.rs  ui_systems.rs
