[package]
name = "unnamed-rts"
version = "0.1.0"
authors = ["Nehliin <oskar.d.nehlin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
debug = true
opt-level = 0
debug-assertions = true
incremental = true

[profile.dev.package."*"]
opt-level = 3 
debug = true 
debug-assertions = true


[profile.dev.build-override]
opt-level = 3
codegen-units = 1

[dependencies]
winit = "0.24" 
futures = "0.3"
env_logger = "0.8"
mint = "0.5"
glam = {version = "0.13", features = ["mint", "serde", "debug-glam-assert", "bytemuck"]}
wgpu = "0.7"
log = "0.4"
legion = "0.4" 
crevice = "0.6"
bytemuck = {version = "1.5", features = ["derive"]}
image = "0.23"
once_cell = "1"
crossbeam-channel = "0.4.4" # use the same version as laminar
anyhow = "1"
egui = "0.8"
rayon = "1"
laminar = "0.4"
bincode = "1.3"
serde = {version = "1", features = ["derive"]}
gltf = "0.15"
fxhash = "0.2"


[dev-dependencies]
criterion = "0.3"
paste = "1"

[[bench]]
name = "intersection_bench"
harness = false

[build-dependencies]
shaderc = "0.7"
glob = "0.3"
rayon = "1"
anyhow = "1"