[package]
name = "unnamed-rts"
version = "0.1.0"
authors = ["Nehliin <oskar.d.nehlin@gmail.com>"]
edition = "2018"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "map-editor"
path = "src/bin/map-editor/editor_main.rs"
required-features = ["graphics"]

[[bin]]
name = "client"
path = "src/bin/client/client_main.rs"
required-features = ["graphics"]

[[bin]]
name = "server"
path = "src/bin/server/server_main.rs"

[profile.dev]
debug = true
opt-level = 0
debug-assertions = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev.package."*"]
opt-level = 3 
debug = true 
debug-assertions = true


[dependencies]
futures = "0.3"
env_logger = "0.9"
mint = "0.5"
glam = {version = "0.17", features = ["mint", "serde", "debug-glam-assert", "bytemuck"]}
log = "0.4"
legion = {version = "0.4", features = ["extended-tuple-impls"]} 
bytemuck = {version = "1.5", features = ["derive"] }
once_cell = "1"
crossbeam-channel = "0.5"
anyhow = "1"
rayon = "1"
laminar = "0.5" 
bincode = "1.3"
serde = {version = "1", features = ["derive"]}
fxhash = "0.2"
mimalloc = {version = "0.1", default-features = false}
itertools = "0.10"

# Graphics
image = {version = "0.23", optional = true }
crevice = {version = "0.7.1", optional = true }
wgpu = {version = "0.10", optional = true}
egui = {version = "0.14", optional = true }
gltf = {version = "0.16", optional = true }
winit = {version = "0.25", optional = true} 

[features]
default = ["graphics"]
graphics = ["image", "crevice", "wgpu", "egui", "gltf", "winit"]

[dev-dependencies]
criterion = "0.3"
paste = "1"

[[bench]]
name = "intersection_bench"
harness = false
